re PR c++/15503 (nested template problem)

PR c++/15503
	* parser.c (cp_parser_mem_initializer_id): Gracefully reject
	'typename', and accept 'template'.

	PR c++/15503
	* g++.dg/template/meminit2.C: New test.

From-SVN: r82662